--- a/css/index.css
+++ b/css/index.css
@@ -25,53 +25,7 @@ a {
 }
 
 h2{
-    font-size: 48px;
-}
-
-header{
-    margin: 2.5%;
-    display: flex;
-    justify-content: flex-end;
-}
-
-header nav ul {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-}
-
-header nav ul li {
-    list-style-type: none;
-    width: 20vh;
-}
-
-header nav ul li a {
-    text-decoration: none;
-    color: black;
-}
-
-#mobile-menu-btn {
-    display: none; 
-    cursor: pointer;
-}
-
-#mobile-menu {
-    display: none;
-    position: fixed; 
-    top: 0;
-    right: 0;
-    width: 100%;
-    height: 30%; 
-    padding:5%;
-    background-color: #fff; 
-    z-index: 1000;
-    
-
-    justify-content: space-between;
-}
-
-#mobile-menu ul {
-    list-style-type: none;
+    font-size: calc(1rem + 2vw);
 }
 
 main #banner {
@@ -79,31 +33,69 @@ main #banner {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    height: 100vh;
+}
 
-    height: 90vh;
+#title {
+    overflow: hidden;
+    width: 80%;
 }
 
 main #banner h1 {
-    font-size: 96px;
+    text-align: center;
+    font-size: calc(3rem + 3vw);
+    animation: fadeIn 1s;
 }
 
 main #banner p {
-    font-size: 25px;
-}
-
-.btn {
-    background-color: black;
-    color:white;
-    margin:1%;
-    padding:1%;
-    border-radius: 50px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+    animation: fadeInSimple 0.3s ease-in forwards;
+    opacity: 0;
+    animation-delay: 0.5s;
 }
 
 main #banner a {
-    width:8%;
+    animation: fadeInSimple 0.3s ease-in forwards;
+    opacity: 0;
+    animation-delay: 1s;
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+        transform: translateY(calc(3rem + 3vw));
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+@keyframes fadeInSimple {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+
+main #banner p {
+    font-size: 25px;
+    margin: 10px 0;
+}
+
+.btn {
+    width: fit-content;
+    background-color: black;
+    color:white;
+    margin:1%;
+    padding:10px 20px;
+    border-radius: 50px;
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    /* prevent word wrap */
+    white-space: nowrap;
 }
 
 #meteo-section, #city-section {
@@ -123,6 +115,9 @@ main #banner a {
 }
 
 #meteo-section-text, #city-section-text{
+    display: flex;
+    flex-direction: column;
+    gap: 5%;
     width: 40%;
     line-height: 1.6;
 }
@@ -137,12 +132,10 @@ main #banner a {
 
 #meteo-section-text a{
     margin-top: 5%;
-    width: 25%;
 }
 
 #city-section-text a{
     margin-top: 5%;
-    width: 20%;
 }
 
 #meteo-section-img img, #city-section-img img{
@@ -150,33 +143,20 @@ main #banner a {
     object-fit: contain;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 700px) {
 
-    header{
-        margin:5%;
-    }
-
-    #mobile-menu-btn {
-        display: flex;
-    }
-
-    #desktop-menu {
-        display: none;
+    main #banner p {
+        margin-bottom: calc((768px - 100vw)/7);
+        margin-top: calc((768px - 100vw)/20)
     }
 
     main #banner h1 {
-        font-size: 32px;
+        font-size: calc(2rem + 5vw);
         text-align: center;
     }
 
     main #banner p, main #banner a {
         font-size: 16px;
-    }
-
-    main #banner a {
-        width: 120px;
-        margin: 5%;
-        padding: 2.5%;
     }
 
     #meteo-section, #city-section {
@@ -193,14 +173,12 @@ main #banner a {
     h2{
         font-size: 32px;
     }
+}
 
-    #meteo-section-text a {
-        width:60%;
-        padding: 2%;
-    }
+@media (max-width: 370px) {
 
-    #city-section-text a {
-        width:45%;
-        padding: 2%; 
+    main #banner h1 {
+        font-size: calc(2.5rem);
+        animation: fadeIn 1s;
     }
 }
