--- a/css/page1.css
+++ b/css/page1.css
@@ -1,16 +1,3 @@
-*{
-    margin:0;
-    padding:0;
-
-    font-family: Inter;
-    overflow-x: hidden;
-}
-
-*, *::after, *::before {
-    box-sizing: border-box;
-}
-
-
 img{
     display: block;
 }
@@ -28,55 +15,14 @@ h2{
     font-size: 48px;
 }
 
-header{
-    margin: 2.5%;
-    display: flex;
-    justify-content: flex-end;
-}
-
-header nav ul {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-}
-
-header nav ul li {
-    list-style-type: none;
-    width: 20vh;
-}
-
-header nav ul li a {
-    text-decoration: none;
-    color: black;
-}
-
-#mobile-menu-btn {
-    display: none; 
-    cursor: pointer;
-}
-
-#mobile-menu {
-    display: none;
-    position: fixed; 
-    top: 0;
-    right: 0;
-    width: 100%;
-    height: 30%; 
-    padding:5%;
-    background-color: #fff; 
-    z-index: 1000;
-    
-
-    justify-content: space-between;
-}
-
-#mobile-menu ul {
-    list-style-type: none;
-}
-
 main {
     padding: 50px 20px;
     text-align:center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
 
 main h2 {
