--- a/css/page1.css
+++ b/css/page1.css
@@ -41,3 +41,13 @@ main h2 {
     max-width: 100%; 
     height: auto;
 }
+
+@media (max-width: 768px) {
+    #main-wrapper{
+        margin-top:10%;
+    }
+
+    #meteo-section-img{
+        margin: 10%;
+    }
+}
