--- a/css/page1.css
+++ b/css/page1.css
@@ -64,7 +64,7 @@ main h2 {
 #reponse {
     font-size: 1.7rem;
     font-weight: 500;
-    max-width: 600px;
+    max-width: 50vw;
 }
 
 @media (max-width: 800px) {
