--- a/css/la-meteo.css
+++ b/css/la-meteo.css
@@ -25,8 +25,9 @@ main {
     height: 100vh;
 }
 
-.main-wrapper {
-    display: none;
+.meteo-section {
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
 }
 
 main h2 {
@@ -46,20 +47,7 @@ main h2 {
     display: none;
 }
 
-@media (max-width: 768px) {
-    #main-wrapper{
-        margin-top:10%;
-    }
 
-    #meteo-section-img{
-        margin: 10%;
-    }
-
-}
-
-.show {
-    display: block !important;
-}
 
 #reponse {
     font-size: 1.7rem;
@@ -73,6 +61,10 @@ main h2 {
         font-size: 1.5rem;
     }
 
+    h1 {
+        font-size: 2rem;
+    }
+
 }
 
 .ranger{
@@ -81,3 +73,14 @@ main h2 {
     gap: 15px;
 } 
 
+
+.show {
+    display: block !important;
+    opacity: 1;
+}
+
+h1 {
+    color: rgb(189, 189, 189); 
+    font-size: 2.5rem; 
+    margin-top: -20px;
+}
