--- a/css/ma-ville.css
+++ b/css/ma-ville.css
@@ -199,3 +199,10 @@ br {
     opacity: 1;
     transform: translate(-50%, -60%);
 }
+
+footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+}
