--- a/css/layout.css
+++ b/css/layout.css
@@ -220,6 +220,7 @@ footer{
     display: flex;
     align-items: center;
     justify-content: center;
+    background: linear-gradient(180deg, rgba(247,247,247,1) 0%, rgba(255,255,255,0) 100%);
 }
 
 @media (max-width: 768px) {
