--- a/css/layout.css
+++ b/css/layout.css
@@ -220,7 +220,8 @@ footer{
     display: flex;
     align-items: center;
     justify-content: center;
-    background: linear-gradient(180deg, rgba(247,247,247,1) 0%, rgba(255,255,255,0) 100%);
+    background: linear-gradient(180deg, rgba(247,247,247,1) 0%, rgba(255, 255, 255, 1) 100%);
+    border-top: #EFEFEF solid 1px;
 }
 
 @media (max-width: 768px) {
