--- a/css/layout.css
+++ b/css/layout.css
@@ -88,7 +88,7 @@
     font-size: 18px;
     height: 6rem;
     border-bottom: #EFEFEF solid 1px;
-    background: linear-gradient(0deg, rgba(247,247,247,1) 0%, rgba(255,255,255,0) 100%);
+    background: linear-gradient(0deg, rgba(247,247,247,1) 0%, rgba(255, 255, 255, 1) 100%);
     padding: 0 8vw;
 }
 
