--- a/css/la-meteo.css
+++ b/css/la-meteo.css
@@ -55,18 +55,6 @@ main h2 {
     z-index: 999;
 }
 
-@media (max-width: 800px) {
-
-    #reponse {
-        font-size: 1.5rem;
-    }
-
-    h1 {
-        font-size: 2rem;
-    }
-
-}
-
 .ranger{
     display: flex;
     flex-direction: column;
@@ -87,4 +75,18 @@ h1 {
     color: rgb(189, 189, 189) !important; 
     font-size: 2.5rem; 
     margin-top: -20px;
+}
+
+/* RESPONSIVE */
+
+@media (max-width: 800px) {
+
+    #reponse {
+        font-size: 1.5rem;
+    }
+
+    h1 {
+        font-size: 2rem;
+    }
+
 }
