--- a/css/ma-ville.css
+++ b/css/ma-ville.css
@@ -147,11 +147,11 @@ br {
     padding: 10px 20px;
     color: #757575;
     backdrop-filter: blur(10px);
-    margin-top: 10px;
+    margin-top: 30px;
     font-size: 1rem;
     font-weight: 200;
     text-transform:uppercase;
-    position: fixed;
+    position: absolute;
     top: 55%;
     left: 50%;
     transform: translate(-50%, -50%);
